# Advent-Of-Code-2025

./: README.md
Day1/: Challenge.txt  app  dub.json
Day1/source/: app.d
Day2/: build.sh  solution.c
Day3/: App.java
Day4/: go.mod  main.go
Day5/: input.txt
Day5/src/: main.rs
Day6/: build.sh  main.cpp  main.py
Day7/: main.rb
Day8/: README.md  index.ts  input.txt  package.json
Day9/: main.py  pyproject.toml
