[project]
name = "day9"
version = "0.1.0"
description = ""
authors = [
    {name = "grandmasponge",email = "tobyr2006@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "shapely (>=2.1.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
